Website Redesign & "About Me" Rewrite
Removed old page spacing/formatting and replaced with shell of new list based system.
Rewrote "About Me" section to better reflect my interests and hobbies.

--- a/AboutMePage/Portofilo Website.htm
+++ b/AboutMePage/Portofilo Website.htm
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="PageDesign_AboutMe.css">
 <title>Portfolio - Robert Eads</title>
 </head>
-<body style="background-color: #F5F5F5;">
+<body>
 
 <!-- Navagation Bar -->
 <div id="navagationBar" style="background-color: #222222;">
@@ -16,9 +16,10 @@
 	</ul>
 </div>
 
+<!--
 <br><br>
 
-<!-- Dual Column "About Me" Layout -->
+ Dual Column "About Me" Layout 
 <div class="row">
 	<div class = "columnLeft">
 		<p style="text-align:center;"><img style="border: 4px solid black;" src="Profile Picture Robert Eads.jpg" alt="Profile Picture Robert Eads" width="500" height="625"></p>
@@ -42,7 +43,40 @@
 			<li>HMTL/CSS</li>
 		 </ul></p>
 	</div>
+</div> -->
+
+
+
+<div class="lightBox">
+	<br>
+	<h3>About Me</h3>
+	<p>
+		My name is Robert Eads and I am 20 years old. I was born and raised in the Dallas, Texas area and I whole hearted embrace Texas culture. My hobbies include running, playing basketball, 
+		and listening to music.
+		
+	</p>
+	<p>
+		My love of technology started the moment I got my first laptop in 6th grade and has not stopped growing. 
+		I built my first computer during sophmore year of high school and have been tinkering with any technology I can get my hands on ever since.
+		My first experience with programming was the summer after 7th grade at a University of Texas at Dallas coding camp. That exploration got me hooked on programming and afterwards I took just about every computer science
+		class my high school had to offer. Now, I am a student at Texas A&M University studying for my B.S. in computer science.
+	</p>
+
+
 </div>
+
+
+<div class="darkBox"><br><h3>Education</h3><br></div>
+<div class="lightBox"><br><h3>Projects</h3><br></div>
+<div class="darkBox"><br><h3>Extracurricular</h3><br></div>
+<div class="lightBox"><br><h3>Skills</h3><br></div>
+<div class="darkBox"><br><h3>footer</h3><br></div>
+
+
+
+
+
+
 
 
 
