--- a/AboutMePage/Portofilo Website.htm
+++ b/AboutMePage/Portofilo Website.htm
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="PageDesign_AboutMe.css">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Portfolio - Robert Eads</title>
 </head>
 <body>
@@ -17,24 +18,7 @@
 </div>
 
 <!--
-<br><br>
 
- Dual Column "About Me" Layout 
-<div class="row">
-	<div class = "columnLeft">
-		<p style="text-align:center;"><img style="border: 4px solid black;" src="Profile Picture Robert Eads.jpg" alt="Profile Picture Robert Eads" width="500" height="625"></p>
-	</div>
-	
-	<div class="leftSpacing"></div>
-	<div class="topSpacing"></div>
-	
-	<div class = "columnRight" style="border: 4px solid black; background-color: #DDDDDD;">
-		<h2 style = "text-align: center">About Me</h2>
-		<p>My name is Robert Eads and I am 20 years old. I was born and raised in the Dallas, Texas area and I whole hearted embrace Texas culture.
-		My love of technology started the moment I got my first laptop in 6th grade and has not stopped growing. 
-		I built my first computer during my sophmore year of high school and have been tinkering with any technology I can get my hands on ever since.</p>
-		<p>My first experience with coding was the summer after 7th grade at a University of Texas at Dallas coding camp. That exploration got me hooked on coding and after that I took just about every computer science
-		class my school offered when I got to high school. I am now a student at Texas A&M University studying for my undergraduate degree in computer science.</p>
 		<p>Langauages I have worked in before include:
 		 <ul>
 			<li>Python</li>
@@ -42,28 +26,24 @@
 			<li>C++</li> 
 			<li>HMTL/CSS</li>
 		 </ul></p>
-	</div>
-</div> -->
 
-
+-->
 
 <div class="lightBox">
 	<br>
 	<h3>About Me</h3>
-	<p>
-		My name is Robert Eads and I am 20 years old. I was born and raised in the Dallas, Texas area and I whole hearted embrace Texas culture. My hobbies include running, playing basketball, 
-		and listening to music.
-		
-	</p>
-	<p>
-		My love of technology started the moment I got my first laptop in 6th grade and has not stopped growing. 
-		I built my first computer during sophmore year of high school and have been tinkering with any technology I can get my hands on ever since.
-		My first experience with programming was the summer after 7th grade at a University of Texas at Dallas coding camp. That exploration got me hooked on programming and afterwards I took just about every computer science
-		class my high school had to offer. Now, I am a student at Texas A&M University studying for my B.S. in computer science.
-	</p>
-
-
+	<img style="border-radius: 50%; border: 5px solid #500000; float: right; margin-right: 27%;" src="Profile Picture Robert Eads.jpg" alt="Profile Picture Robert Eads" width="225" height="225">
+	<div>
+		<p style="margin-top:2%">My name is Robert Eads and I am 20 years old. I was born and raised in the Dallas, Texas area and I whole hearted embrace Texas culture. My hobbies include running, playing basketball, 
+			and listening to music.</p>
+		<p>My love of technology started the moment I got my first laptop in 6th grade and has not stopped growing. 
+			I built my first computer during sophmore year of high school and have been tinkering with any technology I can get my hands on ever since.
+			My first experience with programming was the summer after 7th grade at a University of Texas at Dallas coding camp. That exploration got me hooked on programming and afterwards I took just about every computer science
+			class my high school had to offer. Now, I am a student at Texas A&M University studying for my B.S. in computer science.</p>
+	</div>
+	<br>
 </div>
+	
 
 
 <div class="darkBox"><br><h3>Education</h3><br></div>
@@ -71,11 +51,6 @@
 <div class="darkBox"><br><h3>Extracurricular</h3><br></div>
 <div class="lightBox"><br><h3>Skills</h3><br></div>
 <div class="darkBox"><br><h3>footer</h3><br></div>
-
-
-
-
-
 
 
 
