--- a/AboutMePage/Portofilo Website.htm
+++ b/AboutMePage/Portofilo Website.htm
@@ -17,29 +17,22 @@
 	</ul>
 </div>
 
-<!--
 
-		<p>Langauages I have worked in before include:
-		 <ul>
-			<li>Python</li>
-			<li>Java</li>
-			<li>C++</li> 
-			<li>HMTL/CSS</li>
-		 </ul></p>
-
--->
-
-<div class="lightBox">
+<div class="lightBox" id="aboutMe">
 	<br>
 	<h3>About Me</h3>
-	<img style="border-radius: 50%; border: 5px solid #500000; float: right; margin-right: 27%;" src="Profile Picture Robert Eads.jpg" alt="Profile Picture Robert Eads" width="225" height="225">
-	<div>
-		<p style="margin-top:2%">My name is Robert Eads and I am 20 years old. I was born and raised in the Dallas, Texas area and I whole hearted embrace Texas culture. My hobbies include running, playing basketball, 
-			and listening to music.</p>
-		<p>My love of technology started the moment I got my first laptop in 6th grade and has not stopped growing. 
-			I built my first computer during sophmore year of high school and have been tinkering with any technology I can get my hands on ever since.
-			My first experience with programming was the summer after 7th grade at a University of Texas at Dallas coding camp. That exploration got me hooked on programming and afterwards I took just about every computer science
-			class my high school had to offer. Now, I am a student at Texas A&M University studying for my B.S. in computer science.</p>
+	
+
+	<div style="display: block; text-align: center;">
+		<div style="max-width: 500px; margin: 0 auto; text-align: left; display: inline-block; padding: 50px; padding-bottom: 0px; padding-top: 0px;">
+			<p>My name is Robert Eads and I am 20 years old. I was born and raised in the Dallas, Texas area and I whole heartedly embrace Texas culture. My hobbies include running, playing basketball, 
+				and listening to music.</p>
+			<p>My love of technology started the moment I got my first laptop in 6th grade and has not stopped growing. 
+				I built my first computer during sophmore year of high school and have been tinkering with any technology I can get my hands on ever since.
+				My first experience with programming was the summer after 7th grade at a University of Texas at Dallas coding camp. That exploration got me hooked on programming and afterwards I took just about every computer science
+				class my high school had to offer. Now, I am a student at Texas A&M University studying for my B.S. in computer science.</p>
+		</div>
+		<img style="border-radius: 50%; border: 5px solid #500000; vertical-align: top; display: inline-block; margin-top: 22.5px;" src="Profile Picture Robert Eads.jpg" alt="Profile Picture Robert Eads" width="225" height="225">
 	</div>
 	<br>
 </div>
@@ -49,7 +42,26 @@
 <div class="darkBox"><br><h3>Education</h3><br></div>
 <div class="lightBox"><br><h3>Projects</h3><br></div>
 <div class="darkBox"><br><h3>Extracurricular</h3><br></div>
-<div class="lightBox"><br><h3>Skills</h3><br></div>
+
+<div class="lightBox" id="skills">
+	<br>
+	<h3>Skills</h3>
+	<div id="skills" style="text-align: center;">
+	<ul class="skill">
+		<li>Python</li>
+		<li>Java</li>
+		<li>C++</li>
+		<li>HMTL</li>
+		<li>CSS</li>
+	</ul>
+		<span class="dot"></span>
+	</div>
+	<br>
+</div>
+
+
+
+
 <div class="darkBox"><br><h3>footer</h3><br></div>
 
 
