--- a/AboutMePage/Portofilo Website.htm
+++ b/AboutMePage/Portofilo Website.htm
@@ -18,7 +18,9 @@
 </div>
 
 
-<div class="lightBox" id="aboutMe">
+
+
+<div class="aboutMe">
 	<br>
 	<h3>About Me</h3>
 	
@@ -37,6 +39,8 @@
 	<br>
 </div>
 	
+
+
 
 
 <div class="darkBox"><br><h3>Education</h3><br></div>
