About Me Wording Rework

--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -11,9 +11,9 @@
 <div class="homePage">
 	<!-- About Me -->
 	<div class="darkBox" style="padding-bottom: 30px;">
-		<h2 class="heading" id="aboutMe">About Me</h2>
+		<h2 class="heading" id="aboutMe" style="padding-bottom:10px;">About Me</h2>
 		<div style="text-align:center;">
-			<div class="paragraphText">
+			<div class="paragraphText" style="padding-top:0;">
 				<p>My name is Robert Eads and I am 20 years old. I was born and raised in the Dallas, Texas area and I whole heartedly embrace Texas culture. My hobbies include running, playing basketball, 
 					and listening to music.</p>
 				<p>My love of technology started the moment I got my first laptop in 6th grade and has not stopped growing. 
@@ -21,9 +21,16 @@
 					My first experience with programming was the summer after 7th grade at a University of Texas at Dallas coding camp. That exploration got me hooked on programming and afterwards I took just about every computer science
 					class my high school had to offer. Now, I am a student at Texas A&M University studying for my B.S. in computer science.</p>
 			</div>
-			<img style="vertical-align: top; display: inline-block; padding-top: 17.5px;" src="Profile Picture Robert Eads.png" alt="Profile Picture Robert Eads" width="250" height="250">
+			<img class="profilePicture" src="Profile Picture Robert Eads.png" alt="Profile Picture Robert Eads">
 		</div>
 	</div>
+	
+	<!--
+		An active computer science apprentice at Texas A&M University in my sophmore year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
+		
+		I whole heartly embrace Texas culture and am fond of running, playing basketball, and listening to music.
+	
+	<!-- sdfsdf -->
 		
 
 
