Design Overhaul Completion
Finished redesigning website layout and cleaned up CSS file.

--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -11,35 +11,54 @@
 <div class="homePage">
 	<!-- About Me -->
 	<div class="darkBox" style="padding-bottom: 30px;">
-		<h2 class="heading" id="aboutMe" style="padding-bottom:10px;">About Me</h2>
+		<h2 class="heading" id="aboutMe">About Me</h2>
 		<div style="text-align:center;">
-			<div class="paragraphText" style="padding-top:0;">
-				<p>My name is Robert Eads and I am 20 years old. I was born and raised in the Dallas, Texas area and I whole heartedly embrace Texas culture. My hobbies include running, playing basketball, 
-					and listening to music.</p>
-				<p>My love of technology started the moment I got my first laptop in 6th grade and has not stopped growing. 
-					I built my first computer during sophmore year of high school and have been tinkering with any technology I can get my hands on ever since.
-					My first experience with programming was the summer after 7th grade at a University of Texas at Dallas coding camp. That exploration got me hooked on programming and afterwards I took just about every computer science
-					class my high school had to offer. Now, I am a student at Texas A&M University studying for my B.S. in computer science.</p>
-			</div>
+			<p style="max-width:500px; margin:0 auto; text-align:left; display:inline-block; padding:30px; padding-top:45px; text-indent:2em;">
+				An active computer science apprentice at Texas A&M University in my sophmore year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
+				Currently exploring different facets of mixed reality, but am looking to gain experience in the field of software developement and artificial intelligence.
+				I whole heartly embrace Texas culture and am fond of running, playing basketball, and listening to music.
+			</p>
 			<img class="profilePicture" src="Profile Picture Robert Eads.png" alt="Profile Picture Robert Eads">
 		</div>
 	</div>
 	
-	<!--
-		An active computer science apprentice at Texas A&M University in my sophmore year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
+	<!-- Education -->
+	<div style="padding-bottom:30px;">
+		<h2 class="heading" id="education">Education</h2>
 		
-		I whole heartly embrace Texas culture and am fond of running, playing basketball, and listening to music.
+	</div>
 	
-	<!-- sdfsdf -->
+	<!-- Projects -->
+	<div class="darkBox" style="padding-bottom:30px;">
+		<h2 class="heading" id="projects">Projects</h2>
 		
+	</div>
+	
+	
+	<!-- Extracurricular -->
+	<div style="padding-bottom:30px;">
+		<h2 class="heading" id="extracurricular">Extracurricular</h2>
+		
+	</div>
+	
+	
+	<!-- Skills -->
+	<div class="darkBox" style="padding-bottom:30px;">
+		<h2 class="heading" id="skills">Skills</h2>
+		
+	</div>
+	
+	
+	
+	<!-- Footer -->
+
+
+
+
 
 
 
 <!--
-	<div class="darkBox"><br><h3>Education</h3><br></div>
-	<div class="lightBox"><br><h3>Projects</h3><br></div>
-	<div class="darkBox"><br><h3>Extracurricular</h3><br></div>
-
 	<div class="lightBox" id="skills">
 		<br>
 		<h3>Skills</h3>
@@ -56,10 +75,6 @@
 		<br>
 	</div>
 
-
-
-
-	<div class="darkBox"><br><h3>footer</h3><br></div>
 	-->
 </div>
 
