Projects Section Updated
Added Saxo Sim project to website and implemented basic formatting.

--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -11,9 +11,9 @@
 <div class="homePage">
 	<!-- About Me -->
 	<div class="darkBox" style="padding-bottom: 30px;">
-		<h2 class="heading" id="aboutMe">About Me</h2>
+		<h1 class="heading" id="aboutMe">About Me</h1>
 		<div style="text-align:center;">
-			<p style="max-width:500px; margin:0 auto; text-align:left; display:inline-block; padding:30px; padding-top:45px; text-indent:2em;">
+			<p class="paragraphs" style="max-width:500px; text-align:left; padding:30px; padding-top:45px;">
 				An active computer science apprentice at Texas A&M University in my sophmore year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
 				Currently exploring different facets of mixed reality, but am looking to gain experience in the field of software developement and artificial intelligence.
 				I whole heartly embrace Texas culture and am fond of running, playing basketball, and listening to music.
@@ -24,27 +24,44 @@
 	
 	<!-- Education -->
 	<div style="padding-bottom:30px;">
-		<h2 class="heading" id="education">Education</h2>
+		<h1 class="heading" id="education">Education</h1>
 		
 	</div>
 	
 	<!-- Projects -->
 	<div class="darkBox" style="padding-bottom:30px;">
-		<h2 class="heading" id="projects">Projects</h2>
-		
+		<h1 class="heading" id="projects">Projects</h1>
+		<div class="project">
+			<div class="projectTitle">
+				<h3 style="margin:2px;">Saxophone Simulator</h3>
+				<p style="margin:2px;">May 2021</p>
+				<p style="margin:2px;">Co-developed</p>
+			</div>
+			<img style="display:inline-block; vertical-align:top;" src="SaxSimDemo.JPG" alt="Sax Sim Screenshot" width="480" height="270">
+			<div class="projectDescription">
+				<p class="paragraphs" style="max-width:500px; vertical-align:top;">Developed with the Unity game engine in C# alongside my parnter Jonah, "Saxo Sim" was taken from concept to completion in just over one week.
+																				   I designed and implimented the overall UI and was responsible for coding the note name display when a sound was played.</p>
+				<h4 style="padding-left:30px;"><u>Key Elements</u></h4>
+				<ul>
+					<li>Coded in C#</li>
+					<li>Version Control</li>
+					<li>Collaborative Coding</li>
+				</ul>
+			</div>
+		</div>
 	</div>
 	
 	
 	<!-- Extracurricular -->
 	<div style="padding-bottom:30px;">
-		<h2 class="heading" id="extracurricular">Extracurricular</h2>
+		<h1 class="heading" id="extracurricular">Extracurricular</h1>
 		
 	</div>
 	
 	
 	<!-- Skills -->
 	<div class="darkBox" style="padding-bottom:30px;">
-		<h2 class="heading" id="skills">Skills</h2>
+		<h1 class="heading" id="skills">Skills</h1>
 		
 	</div>
 	
@@ -81,7 +98,7 @@
 
 
 <!--
-<br><br><h2>Showcase</h2>
+<br><br><h1>Showcase</h1>
 <h3>Active Projects</h3>
 <p>(Proejcts I am currently working on at the time of showing this to others such as hopefully the magic dueling game, stutter speak, and this website.)</p>
 <br><h3>Completed Projects</h3>
