Update to Projects Section
Removed image from Saxophone Simulator for now and added initial information for Stutter Speak.

--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -15,18 +15,20 @@
 		<div style="text-align:center;">
 			<p class="paragraphs" style="max-width:500px; text-align:left; padding:30px; padding-top:45px;">
 				An active computer science apprentice at Texas A&M University in my sophmore year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
-				Currently exploring different facets of mixed reality, but am looking to gain experience in the field of software developement and artificial intelligence.
+				Currently exploring different facets of mixed reality, but am looking to gain experience in the field of software engineering or game development.
 				I whole heartly embrace Texas culture and am fond of running, playing basketball, and listening to music.
 			</p>
 			<img class="profilePicture" src="Profile Picture Robert Eads.png" alt="Profile Picture Robert Eads">
 		</div>
 	</div>
 	
+	
 	<!-- Education -->
 	<div style="padding-bottom:30px;">
 		<h1 class="heading" id="education">Education</h1>
 		
 	</div>
+	
 	
 	<!-- Projects -->
 	<div class="darkBox" style="padding-bottom:30px;">
@@ -37,9 +39,9 @@
 				<p style="margin:2px;">May 2021</p>
 				<p style="margin:2px;">Co-developed</p>
 			</div>
-			<img style="display:inline-block; vertical-align:top;" src="SaxSimDemo.JPG" alt="Sax Sim Screenshot" width="480" height="270">
+			<!--<img style="display:inline-block; vertical-align:top;" src="SaxSimDemo.JPG" alt="Sax Sim Screenshot" width="480" height="270">-->
 			<div class="projectDescription">
-				<p class="paragraphs" style="max-width:500px; vertical-align:top;">Developed with the Unity game engine in C# alongside my parnter Jonah, "Saxo Sim" was taken from concept to completion in just over one week.
+				<p class="paragraphs" style="max-width:500px;">Created with the Unity game engine in C# alongside my parnter Jonah, "Saxo Sim" was taken from concept to completion in just over one week.
 																				   I designed and implimented the overall UI and was responsible for coding the note name display when a sound was played.</p>
 				<h4 style="padding-left:30px;"><u>Key Elements</u></h4>
 				<ul>
@@ -47,6 +49,19 @@
 					<li>Version Control</li>
 					<li>Collaborative Coding</li>
 				</ul>
+			</div>
+		</div>
+		<div class="project">
+			<div class="projectTitle">
+			<h3 style="margin:2px;">Stutter Speak</h3>
+			<p style="margin:2px;">May 2021 - August 2021</p>
+			<p style="margin:2px;">Co-developed</p>
+			</div>
+			<div class="projectDescription">
+				<p>Developed as a team of two in partnership with a licensed, certified speech-language pathologist, Stutter Speak is a VR application built in Unreal Engine 4 using a blend of C++ and Blueprint. 
+				   Designed to help those who stutter improve confindence in their public speaking ability, the application puts the user on stage in front of a digital audience to closely simulate the public speaking experience.
+				   By giving users the ability to self-track stuttering and rate themselves on different aspects of their speech, the application can then provide helpful feedback and graphical representations of data to show 
+				   progress over time.
 			</div>
 		</div>
 	</div>
@@ -64,7 +79,6 @@
 		<h1 class="heading" id="skills">Skills</h1>
 		
 	</div>
-	
 	
 	
 	<!-- Footer -->
