--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -41,13 +41,14 @@
 			</div>
 			<!--<img style="display:inline-block; vertical-align:top;" src="SaxSimDemo.JPG" alt="Sax Sim Screenshot" width="480" height="270">-->
 			<div class="projectDescription">
-				<p class="paragraphs" style="max-width:500px;">Created with the Unity game engine in C# alongside my parnter Jonah, "Saxo Sim" was taken from concept to completion in just over one week.
-																				   I designed and implimented the overall UI and was responsible for coding the note name display when a sound was played.</p>
+				<p class="paragraphs" style="max-width:525px;">Created with the Unity game engine in C# alongside my parnter Jonah, "Saxo Sim" was taken from concept to completion in just over one week.
+															   Used as a simple way to gain familiarity with version control and coding in a team environment for my partner and I. 
+															   Design and implimention of the overall UI as well as coding the note name display when a sound was played was my responsibility.</p>
 				<h4 style="padding-left:30px;"><u>Key Elements</u></h4>
 				<ul>
+					<li>Developed collaborative coding skills</li>
+					<li>Learned version control</li>
 					<li>Coded in C#</li>
-					<li>Version Control</li>
-					<li>Collaborative Coding</li>
 				</ul>
 			</div>
 		</div>
@@ -56,12 +57,19 @@
 			<h3 style="margin:2px;">Stutter Speak</h3>
 			<p style="margin:2px;">May 2021 - August 2021</p>
 			<p style="margin:2px;">Co-developed</p>
+			<a style="margin:2px;" class="links" href="https://github.com/Jableman19/StutterSpeak" target="_blank">View on GitHub</a>
 			</div>
 			<div class="projectDescription">
-				<p>Developed as a team of two in partnership with a licensed, certified speech-language pathologist, Stutter Speak is a VR application built in Unreal Engine 4 using a blend of C++ and Blueprint. 
+				<p class="paragraphs" style="max-width:525px;">Developed as a team of two in partnership with a licensed, certified speech-language pathologist, Stutter Speak is a VR application built in Unreal Engine 4 using a blend of C++ and Blueprint. 
 				   Designed to help those who stutter improve confindence in their public speaking ability, the application puts the user on stage in front of a digital audience to closely simulate the public speaking experience.
 				   By giving users the ability to self-track stuttering and rate themselves on different aspects of their speech, the application can then provide helpful feedback and graphical representations of data to show 
-				   progress over time.
+				   progress over time. Stutter Speak is available for the Oculus Quest 2 via the Oculus App Lab store.</p>
+				<h4 style="padding-left:30px;"><u>Key Elements</u></h4>
+				<ul>
+					<li>Created in collaboration with licensed, certified speech-language pathologist</li>
+					<li>Coded in C++ & Blueprint Visual Scripiting</li>
+					<li></li>
+				</ul>
 			</div>
 		</div>
 	</div>
