--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -18,7 +18,7 @@
 				Currently exploring different facets of mixed reality, but am looking to gain experience in the field of software engineering or game development.
 				I whole heartly embrace Texas culture and am fond of running, playing basketball, and listening to music.
 			</p>
-			<img class="profilePicture" src="Profile Picture Robert Eads.png" alt="Profile Picture Robert Eads">
+			<img class="profilePicture" src="images/Profile Picture Robert Eads.png" alt="Profile Picture Robert Eads">
 		</div>
 	</div>
 	
@@ -33,45 +33,65 @@
 	<!-- Projects -->
 	<div class="darkBox" style="padding-bottom:30px;">
 		<h1 class="heading" id="projects">Projects</h1>
-		<div class="project">
-			<div class="projectTitle">
-				<h3 style="margin:2px;">Saxophone Simulator</h3>
-				<p style="margin:2px;">May 2021</p>
-				<p style="margin:2px;">Co-developed</p>
-			</div>
-			<!--<img style="display:inline-block; vertical-align:top;" src="SaxSimDemo.JPG" alt="Sax Sim Screenshot" width="480" height="270">-->
-			<div class="projectDescription">
-				<p class="paragraphs" style="max-width:525px;">Created with the Unity game engine in C# alongside my parnter Jonah, "Saxo Sim" was taken from concept to completion in just over one week.
-															   Used as a simple way to gain familiarity with version control and coding in a team environment for my partner and I. 
-															   Design and implimention of the overall UI as well as coding the note name display when a sound was played was my responsibility.</p>
-				<h4 style="padding-left:30px;"><u>Key Elements</u></h4>
-				<ul>
-					<li>Developed collaborative coding skills</li>
-					<li>Learned version control</li>
-					<li>Coded in C#</li>
-				</ul>
-			</div>
-		</div>
+		
 		<div class="project">
 			<div class="projectTitle">
 			<h3 style="margin:2px;">Stutter Speak</h3>
 			<p style="margin:2px;">May 2021 - August 2021</p>
 			<p style="margin:2px;">Co-developed</p>
-			<a style="margin:2px;" class="links" href="https://github.com/Jableman19/StutterSpeak" target="_blank">View on GitHub</a>
+			<a style="margin:2px;" class="links" href="https://github.com/Jableman19/StutterSpeak" target="_blank"><b>View on GitHub</b></a>
 			</div>
 			<div class="projectDescription">
 				<p class="paragraphs" style="max-width:525px;">Developed as a team of two in partnership with a licensed, certified speech-language pathologist, Stutter Speak is a VR application built in Unreal Engine 4 using a blend of C++ and Blueprint. 
 				   Designed to help those who stutter improve confindence in their public speaking ability, the application puts the user on stage in front of a digital audience to closely simulate the public speaking experience.
 				   By giving users the ability to self-track stuttering and rate themselves on different aspects of their speech, the application can then provide helpful feedback and graphical representations of data to show 
 				   progress over time. Stutter Speak is available for the Oculus Quest 2 via the Oculus App Lab store.</p>
-				<h4 style="padding-left:30px;"><u>Key Elements</u></h4>
-				<ul>
+				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
+				<ul style="margin-top:0; padding-left:1em;">
 					<li>Created in collaboration with licensed, certified speech-language pathologist</li>
 					<li>Coded in C++ & Blueprint Visual Scripiting</li>
-					<li></li>
+					<li>Published on the Oculus App Lap platform</li>
 				</ul>
 			</div>
 		</div>
+		
+		<div class="project">
+			<div class="projectTitle">
+				<h3 style="margin:2px;">Portofilo Website</h3>
+				<p style="margin:2px;">July 2021 - August 2021</p>
+				<p style="margin:2px;">Independent</p>
+				<a style="margin:2px;" class="links" href="https://github.com/RobertEads/PortfolioWebsite" target="_blank"><b>View on GitHub</b></a>
+			</div>
+			<div class="projectDescription">
+				<p class="paragraphs" style="max-wdith:525px;">Written on my own to begin learning web development, this website was coded mainly in HTML & CSS. Hosted with GitHub pages for easy maintainability
+				and expandability.</p>
+				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
+				<ul style="margin:0; padding-left:1em; margin-bottom:25px;">
+					<li>Created from scratch</li>
+					<li>Coded in HTML/CSS</li>
+				</ul>
+			</div>
+		</div>
+		
+		<div class="project">
+			<div class="projectTitle">
+				<h3 style="margin:2px;">Saxophone Simulator</h3>
+				<p style="margin:2px;">May 2021</p>
+				<p style="margin:2px;">Co-developed</p>
+			</div>
+			<div class="projectDescription">
+				<p class="paragraphs" style="max-width:525px;">Created with the Unity game engine in C# alongside my parnter Jonah, "Saxo Sim" was taken from concept to completion in just over one week.
+				Used as a simple way to gain familiarity with version control and coding in a team environment for my partner and I. 
+				Design and implimention of the overall UI as well as coding the note name display when a sound played was my responsibility.</p>
+				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
+				<ul style="margin:0; padding-left:1em; margin-bottom:25px;">
+					<li>Developed collaborative coding skills</li>
+					<li>Learned version control</li>
+					<li>Coded in C#</li>
+				</ul>
+			</div>
+		</div>
+		
 	</div>
 	
 	
