Added Minor Notes

--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -30,7 +30,7 @@
 	</div>
 	
 	
-	<!-- Projects -->
+	<!-- Projects --> <!--Turn project links into github logo images--> <!--Use querys to fix text on smaller screen size-->
 	<div class="darkBox" style="padding-bottom:30px;">
 		<h1 class="heading" id="projects">Projects</h1>
 		
