Education & Projects Sections Updates
Added initial education information and logos. Changed "View on GitHub" to logo based links.

--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -26,11 +26,27 @@
 	<!-- Education -->
 	<div style="padding-bottom:30px;">
 		<h1 class="heading" id="education">Education</h1>
-		
+		<div style="text-align:center;">
+			<div style="display:inline-block; vertial-align:top;">
+				<img src="images/TAM-Logo.png" alt="Texas A&M Logo" width="150" height="150px">
+				<div>
+					<p style="text-align:left;">
+						Texas A&M University, College Station
+						<br>
+						Class of 2024, Engineering Honors
+						<br>
+						B.S. in Computer Science
+						<br>
+						GPA: 3.9/4.0
+					</p>
+				</div>
+			</div>
+		</div>
+		<div> <!-- Relevant Coursework --></div>
 	</div>
 	
 	
-	<!-- Projects --> <!--Turn project links into github logo images--> <!--Use querys to fix text on smaller screen size-->
+	<!-- Projects --><!--Use querys to fix text on smaller screen size-->
 	<div class="darkBox" style="padding-bottom:30px;">
 		<h1 class="heading" id="projects">Projects</h1>
 		
@@ -39,7 +55,12 @@
 			<h3 style="margin:2px;">Stutter Speak</h3>
 			<p style="margin:2px;">May 2021 - August 2021</p>
 			<p style="margin:2px;">Co-developed</p>
-			<a style="margin:2px;" class="links" href="https://github.com/Jableman19/StutterSpeak" target="_blank"><b>View on GitHub</b></a>
+			<a style="margin:3px;" class="links" href="https://github.com/Jableman19/StutterSpeak" target="_blank">
+				<img title="View on GitHub" src="images/GitHub Logo Dark.png" alt="Stutter Speak GitHub Link" width="40px" height="40px">
+			</a>
+			<a style="margin:3px;" class="links" href="" target="_blank">
+				<img title="View in App Lab" src="images/SideQuest Logo Dark.png" alt="Stutter Speap App Lab Link" width="46px" height="40px">
+			</a>
 			</div>
 			<div class="projectDescription">
 				<p class="paragraphs" style="max-width:525px;">Developed as a team of two in partnership with a licensed, certified speech-language pathologist, Stutter Speak is a VR application built in Unreal Engine 4 using a blend of C++ and Blueprint. 
@@ -60,7 +81,9 @@
 				<h3 style="margin:2px;">Portofilo Website</h3>
 				<p style="margin:2px;">July 2021 - August 2021</p>
 				<p style="margin:2px;">Independent</p>
-				<a style="margin:2px;" class="links" href="https://github.com/RobertEads/PortfolioWebsite" target="_blank"><b>View on GitHub</b></a>
+				<a style="margin:3px;" class="links" href="https://github.com/RobertEads/PortfolioWebsite" target="_blank">
+					<img title="View on GitHub" src="images/GitHub Logo Dark.png" alt="Portofili Website GitHub Link" width="40px" height="40px">
+				</a>
 			</div>
 			<div class="projectDescription">
 				<p class="paragraphs" style="max-wdith:525px;">Written on my own to begin learning web development, this website was coded mainly in HTML & CSS. Hosted with GitHub pages for easy maintainability
