Updated Extracurricular Section and Window Size Fix
Added STEM to Stocks entry to the extracurricular section and fixed paragraph max width when resizing window.

--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -57,7 +57,7 @@
 	</div>
 	
 	
-	<!-- Projects --><!--Use querys to center text on smaller screen size--> <!-- Fix text width being too wide for the page -->
+	<!-- Projects --><!--Use querys to center text on smaller screen size-->
 	<div class="darkBox" style="padding-bottom:30px;">
 		<h1 class="heading" id="projects">Projects</h1>
 		
@@ -132,7 +132,22 @@
 	<!-- Extracurricular -->
 	<div style="padding-bottom:30px;">
 		<h1 class="heading" id="extracurricular">Extracurricular</h1>
-		
+		<div class="project">
+			<div class="projectTitle">
+				<h3 style="margin:2px;">STEM to Stocks</h3>
+				<p style="margin:2px;">Core Guild Member</p>
+				<p style="margin:2px;">August 2020 - Current</p>
+				<a style="margin-top:3px;" class="links" href="https://mays.tamu.edu/ms-finance/stem-to-stocks-guild/" target="_blank">
+					<img title="STEM to Stocks Guild Website" src="images/Stem to Stocks Logo.png" alt="STEM to Stocks Guild Website Link" width="150px" height="65px">
+				</a>
+			</div>
+			<div class="projectDescription" style="padding:0;">
+				<ul>
+					<li style="margin-bottom:10px;">Joined the STEM to Stocks Guild, designed to help build professional relationships and develop marketablility as an engineer in the buisness sector.</li>
+					<li style="margin-bottom:10px;">Communicated effectivly with 100+ guild members during biweekly meetings to expand my professional network and create mutually beneficial lasting connections.</li>
+				</ul>
+			</div>
+		</div>
 	</div>
 	
 	
