Added Footer Menu
Added menu in footer with in page links.

--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -200,7 +200,20 @@
 	
 	
 	<!-- Footer -->
-	<div style="padding-bottom:30px;"></div>
+	<div style="height:150px;">
+		<div class="footerMenu">
+			<ul>
+				<li><a href="#aboutMe">About Me</a></li>
+				<li><a href="#education">Education</a></li>
+				<li><a href="#projects">Projects</a></li>
+				<li><a href="#extracurricular">Extracurricular</a></li>
+				<li><a href="#skills">Skills</a></li>
+			</ul>
+		
+		</div>
+	
+	
+	</div>
 	
 	
 </div>
