Update to Footer Section
Updated footer section with title card, copyright, and profile links.

--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -67,7 +67,7 @@
 			<p style="margin:2px;">May 2021 - August 2021</p>
 			<p style="margin:2px;">Co-developed</p>
 			<a style="margin:3px;" class="links" href="https://github.com/Jableman19/StutterSpeak" target="_blank">
-				<img title="View on GitHub" src="images/GitHub Logo Dark.png" alt="Stutter Speak GitHub Link" width="40px" height="40px">
+				<img title="View on GitHub" src="images/GitHub_Logo_Dark.png" alt="Stutter Speak GitHub Link" width="40px" height="40px">
 			</a>
 			<a style="margin:3px;" class="links" href="" target="_blank">
 				<img title="View in App Lab" src="images/SideQuest Logo Dark.png" alt="Stutter Speap App Lab Link" width="46px" height="40px">
@@ -93,7 +93,7 @@
 				<p style="margin:2px;">July 2021 - August 2021</p>
 				<p style="margin:2px;">Independent</p>
 				<a style="margin:3px;" class="links" href="https://github.com/RobertEads/PortfolioWebsite" target="_blank">
-					<img title="View on GitHub" src="images/GitHub Logo Dark.png" alt="Portofili Website GitHub Link" width="40px" height="40px">
+					<img title="View on GitHub" src="images/GitHub_Logo_Dark.png" alt="Portofili Website GitHub Link" width="40px" height="40px">
 				</a>
 			</div>
 			<div class="projectDescription">
@@ -199,8 +199,8 @@
 	</div>
 	
 	
-	<!-- Footer -->
-	<div style="height:150px;">
+	<!-- Footer --> <!-- Use queries to move link icons under my name -->
+	<div style="height:200px;">
 		<div class="footerMenu">
 			<ul>
 				<li><a href="#aboutMe">About Me</a></li>
@@ -209,10 +209,20 @@
 				<li><a href="#extracurricular">Extracurricular</a></li>
 				<li><a href="#skills">Skills</a></li>
 			</ul>
-		
 		</div>
-	
-	
+		<div style="position:relative; left:50%; top:50%; transform:translate(-50%, -65%); text-align:center; width:fit-content;">
+			<a class="links" href="#top">
+				<p style="color:black;">The portofilo site of</p>
+				<h1 style="margin:5px; font-size:250%;">Robert Fisher Eads</h1>
+			</a>
+		</div>
+		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2021</i>
+		<div style="position:absolute; width:fit-content; bottom:25px; right: 25px;">
+				<a href="https://github.com/RobertEads" target="_blank" style="padding:15px;"><img src="images/GitHub_Logo_Dark.png" alt="Find me on GitHub" width="40px" height="40px"></a>
+				<a href="https://www.instagram.com/robert.eads/" target="_blank" style="padding:15px;"><img src="images/Instagram_Logo_Dark.png" alt="Find me on Instagram" width="40px" height="40px"></a>
+				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Dark.png" alt="Find me on LinkedIn" width="47px" height="40px"></a>
+				<a href="mailto:robert.f.eads@tamu.edu" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Dark.png" alt="Email me" width="50px" height="50px" style="vertical-align:bottom;"></a>
+		</div>
 	</div>
 	
 	
