--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -194,6 +194,10 @@
 					<span>Java</span>
 					<span class="dot"></span>
 				</li>
+				<li class="skill">
+					<span>Raspberry Pi</span>
+					<span class="dot"></span>
+				</li>
 			</ul>
 		</div>	
 	</div>
