--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -8,6 +8,23 @@
 <body>
 
 
+<!-- Page Header -->
+<div id="top" style="height:100vh; width:100%;">
+	<div style="position:relative; left:50%; top:50%; transform:translate(-50%,-50%); text-align:center; width:fit-content; padding:40px; font-weight:bold;">
+		<p style="margin:5px; font-size:2em;">The portofilo site of</p>
+		<h1 style="margin:5px; font-size:6em;">Robert Fisher Eads</h1>
+		<div style="position:relative; width:fit-content; left:50%; transform:translateX(-50%); padding-bottom:30px;">
+				<a href="https://github.com/RobertEads" target="_blank" style="padding:15px;"><img src="images/GitHub_Logo_Dark.png" alt="Find me on GitHub" width="35px" height="35px"></a>
+				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Dark.png" alt="Find me on LinkedIn" width="41px" height="35px"></a>
+				<a href="mailto:robert.f.eads@tamu.edu" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Dark.png" alt="Email me" width="45px" height="45px" style="vertical-align:bottom;"></a>
+		</div>
+		<a href="" class="headerResume" id="resumeLink" target="_blank">Resume</a>
+	</div>
+	<div class="headerBackground"></div>
+</div>
+
+
+<!-- Home Page -->
 <div class="homePage">
 	<!-- About Me -->
 	<div class="darkBox" style="padding-bottom: 30px;">
@@ -66,11 +83,11 @@
 			<h3 style="margin:2px;">Stutter Speak</h3>
 			<p style="margin:2px;">May 2021 - August 2021</p>
 			<p style="margin:2px;">Co-developed</p>
-			<a style="margin:3px;" class="links" href="https://github.com/Jableman19/StutterSpeak" target="_blank">
-				<img title="View on GitHub" src="images/GitHub_Logo_Dark.png" alt="Stutter Speak GitHub Link" width="40px" height="40px">
+			<a class="links" href="https://github.com/Jableman19/StutterSpeak" target="_blank">
+				<img style="margin:5px;" title="View on GitHub" src="images/GitHub_Logo_Dark.png" alt="Stutter Speak GitHub Link" width="40px" height="40px">
 			</a>
-			<a style="margin:3px;" class="links" href="" target="_blank">
-				<img title="View in App Lab" src="images/SideQuest Logo Dark.png" alt="Stutter Speap App Lab Link" width="46px" height="40px">
+			<a class="links" href="" target="_blank">
+				<img style="margin:5px;" title="View in App Lab" src="images/SideQuest Logo Dark.png" alt="Stutter Speap App Lab Link" width="46px" height="40px">
 			</a>
 			</div>
 			<div class="projectDescription">
@@ -92,8 +109,8 @@
 				<h3 style="margin:2px;">Portofilo Website</h3>
 				<p style="margin:2px;">July 2021 - August 2021</p>
 				<p style="margin:2px;">Independent</p>
-				<a style="margin:3px;" class="links" href="https://github.com/RobertEads/PortfolioWebsite" target="_blank">
-					<img title="View on GitHub" src="images/GitHub_Logo_Dark.png" alt="Portofili Website GitHub Link" width="40px" height="40px">
+				<a class="links" href="https://github.com/RobertEads/PortfolioWebsite" target="_blank">
+					<img style="margin:5px;" title="View on GitHub" src="images/GitHub_Logo_Dark.png" alt="Portofili Website GitHub Link" width="40px" height="40px">
 				</a>
 			</div>
 			<div class="projectDescription">
@@ -137,8 +154,8 @@
 				<h3 style="margin:2px;">STEM to Stocks</h3>
 				<p style="margin:2px;">Core Guild Member</p>
 				<p style="margin:2px;">August 2020 - Current</p>
-				<a style="margin-top:3px;" class="links" href="https://mays.tamu.edu/ms-finance/stem-to-stocks-guild/" target="_blank">
-					<img title="STEM to Stocks Guild Website" src="images/Stem to Stocks Logo.png" alt="STEM to Stocks Guild Website Link" width="150px" height="65px">
+				<a class="links" href="https://mays.tamu.edu/ms-finance/stem-to-stocks-guild/" target="_blank">
+					<img style="margin-top:5px;" title="STEM to Stocks Guild Website" src="images/Stem to Stocks Logo.png" alt="STEM to Stocks Guild Website Link" width="150px" height="65px">
 				</a>
 			</div>
 			<div class="projectDescription" style="padding:0;">
