Header Update w/ Scroll Arrow
Updated header to include clickable arrow to indicate scrolling.

--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -8,7 +8,7 @@
 <body>
 
 
-<!-- Page Header -->
+<!-- Page Header --> <!-- Use queries to resize and adjust for smaller screen -->
 <div id="top" style="height:100vh; width:100%;">
 	<div style="position:relative; left:50%; top:50%; transform:translate(-50%,-50%); text-align:center; width:fit-content; padding:40px; font-weight:bold;">
 		<p style="margin:5px; font-size:2em;">The portofilo site of</p>
@@ -20,6 +20,9 @@
 		</div>
 		<a href="" class="headerResume" id="resumeLink" target="_blank">Resume</a>
 	</div>
+	<span style="position:absolute; left:50%; top:80%; transform:translateX(-50%); font-size:10em;">
+		<a class="arrow" style="text-decoration:none; color:black;" href="#aboutMe">﹀</a>
+	</span>
 	<div class="headerBackground"></div>
 </div>
 
@@ -86,7 +89,7 @@
 			<a class="links" href="https://github.com/Jableman19/StutterSpeak" target="_blank">
 				<img style="margin:5px;" title="View on GitHub" src="images/GitHub_Logo_Dark.png" alt="Stutter Speak GitHub Link" width="40px" height="40px">
 			</a>
-			<a class="links" href="" target="_blank">
+			<a class="links" href="https://www.oculus.com/experiences/quest/4159850590802633/" target="_blank">
 				<img style="margin:5px;" title="View in App Lab" src="images/SideQuest Logo Dark.png" alt="Stutter Speap App Lab Link" width="46px" height="40px">
 			</a>
 			</div>
