Header/Footer Class Rework & Screen Size Fixes
Added classes for header and footer as well as added queries to adjust based on screen size.

--- a/HomePage/Portofilo Website.htm
+++ b/HomePage/Portofilo Website.htm
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="PageDesign_AboutMe.css">
-	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="pageDesign.css">
+	<link rel="stylesheet" href="queries.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>Portfolio - Robert Eads</title>
 </head>
 <body>
 
 
-<!-- Page Header --> <!-- Use queries to resize and adjust for smaller screen -->
+<!-- Page Header -->
 <div id="top" style="height:100vh; width:100%;">
-	<div style="position:relative; left:50%; top:50%; transform:translate(-50%,-50%); text-align:center; width:fit-content; padding:40px; font-weight:bold;">
-		<p style="margin:5px; font-size:2em;">The portofilo site of</p>
-		<h1 style="margin:5px; font-size:6em;">Robert Fisher Eads</h1>
+	<div class="siteTitle">
+		<p style="margin:5px;">The portofilo site of</p>
+		<h1 style="margin:5px;">Robert Fisher Eads</h1>
 		<div style="position:relative; width:fit-content; left:50%; transform:translateX(-50%); padding-bottom:30px;">
 				<a href="https://github.com/RobertEads" target="_blank" style="padding:15px;"><img src="images/GitHub_Logo_Dark.png" alt="Find me on GitHub" width="35px" height="35px"></a>
 				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Dark.png" alt="Find me on LinkedIn" width="41px" height="35px"></a>
@@ -20,8 +21,8 @@
 		</div>
 		<a href="" class="headerResume" id="resumeLink" target="_blank">Resume</a>
 	</div>
-	<span style="position:absolute; left:50%; top:80%; transform:translateX(-50%); font-size:10em;">
-		<a class="arrow" style="text-decoration:none; color:black;" href="#aboutMe">﹀</a>
+	<span class="arrow">
+		<a href="#aboutMe">﹀</a>
 	</span>
 	<div class="headerBackground"></div>
 </div>
@@ -77,7 +78,7 @@
 	</div>
 	
 	
-	<!-- Projects --><!--Use querys to center text on smaller screen size-->
+	<!-- Projects -->
 	<div class="darkBox" style="padding-bottom:30px;">
 		<h1 class="heading" id="projects">Projects</h1>
 		
@@ -171,7 +172,7 @@
 	</div>
 	
 	
-	<!-- Skills --> <!-- Use queries to shrink space between dots and language on resize -->
+	<!-- Skills -->
 	<div class="darkBox" style="padding-bottom:30px;">
 		<h1 class="heading" id="skills">Skills</h1>
 		<div style="display:flex; justify-content:center; margin-top:10px;">
@@ -223,7 +224,7 @@
 	</div>
 	
 	
-	<!-- Footer --> <!-- Use queries to move link icons under my name -->
+	<!-- Footer -->
 	<div style="height:200px;">
 		<div class="footerMenu">
 			<ul>
@@ -234,14 +235,14 @@
 				<li><a href="#skills">Skills</a></li>
 			</ul>
 		</div>
-		<div style="position:relative; left:50%; top:50%; transform:translate(-50%, -65%); text-align:center; width:fit-content;">
+		<div class="footerTitle">
 			<a class="links" href="#top">
 				<p style="color:black;">The portofilo site of</p>
 				<h1 style="margin:5px; font-size:250%;">Robert Fisher Eads</h1>
 			</a>
 		</div>
 		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2021</i>
-		<div style="position:absolute; width:fit-content; bottom:25px; right: 25px;">
+		<div class="footerLinks">
 				<a href="https://github.com/RobertEads" target="_blank" style="padding:15px;"><img src="images/GitHub_Logo_Dark.png" alt="Find me on GitHub" width="40px" height="40px"></a>
 				<a href="https://www.instagram.com/robert.eads/" target="_blank" style="padding:15px;"><img src="images/Instagram_Logo_Dark.png" alt="Find me on Instagram" width="40px" height="40px"></a>
 				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Dark.png" alt="Find me on LinkedIn" width="47px" height="40px"></a>
