--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="pageDesign.css">
+	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="queries.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>Portfolio - Robert Eads</title>
