Size update for phones

--- a/index.htm
+++ b/index.htm
@@ -238,16 +238,16 @@
 		<div class="footerTitle">
 			<a class="links" href="#top">
 				<p style="color:black;">The portofilo site of</p>
-				<h1 style="margin:5px; font-size:250%;">Robert Fisher Eads</h1>
+				<h1>Robert Fisher Eads</h1>
 			</a>
 		</div>
-		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2021</i>
 		<div class="footerLinks">
 				<a href="https://github.com/RobertEads" target="_blank" style="padding:15px;"><img src="images/GitHub_Logo_Dark.png" alt="Find me on GitHub" width="40px" height="40px"></a>
 				<a href="https://www.instagram.com/robert.eads/" target="_blank" style="padding:15px;"><img src="images/Instagram_Logo_Dark.png" alt="Find me on Instagram" width="40px" height="40px"></a>
 				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Dark.png" alt="Find me on LinkedIn" width="47px" height="40px"></a>
 				<a href="mailto:robert.f.eads@tamu.edu" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Dark.png" alt="Email me" width="50px" height="50px" style="vertical-align:bottom;"></a>
 		</div>
+		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2021</i>
 	</div>
 	
 	
