Skills Name Update

--- a/index.htm
+++ b/index.htm
@@ -216,7 +216,7 @@
 					<span class="dot"></span>
 				</li>
 				<li class="skill">
-					<span>Raspberry Pi</span>
+					<span>Linux Systems</span>
 					<span class="dot"></span>
 				</li>
 			</ul>
