--- a/index.htm
+++ b/index.htm
@@ -15,11 +15,11 @@
 		<p style="margin:5px;">The portofilo site of</p>
 		<h1 style="margin:5px;">Robert Fisher Eads</h1>
 		<div style="position:relative; width:fit-content; left:50%; transform:translateX(-50%); padding-bottom:30px;">
-				<a href="https://github.com/RobertEads" target="_blank" style="padding:15px;"><img src="images/GitHub_Logo_Dark.png" alt="Find me on GitHub" width="35px" height="35px"></a>
-				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Dark.png" alt="Find me on LinkedIn" width="41px" height="35px"></a>
-				<a href="mailto:robert.f.eads@tamu.edu" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Dark.png" alt="Email me" width="45px" height="45px" style="vertical-align:bottom;"></a>
+				<a href="https://github.com/RobertEads" target="_blank" style="padding:15px;"><img src="images/GitHub_Logo_Light.png" alt="Find me on GitHub" width="35px" height="35px"></a>
+				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Light.png" alt="Find me on LinkedIn" width="41px" height="35px"></a>
+				<a href="mailto:robert.f.eads@tamu.edu" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Light.png" alt="Email me" width="45px" height="45px" style="vertical-align:bottom;"></a>
 		</div>
-		<a href="" class="headerResume" id="resumeLink" target="_blank">Resume</a>
+		<a href="Robert_Eads_Resume.pdf" class="headerResume" id="resumeLink" target="_blank">Resume</a>
 	</div>
 	<span class="arrow">
 		<a href="#aboutMe">﹀</a>
