Mobile Sizing Fix & Aggie Web Devs Addition
Adjusted queries to fix spacing on mobile browsers and added Aggie Web Developers club entry to "Extracurricular" section.

--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@
 	<div style="padding-bottom:30px;">
 		<h1 class="heading" id="education">Education</h1>
 		<div style="text-align:center;">
-			<div style="display:inline-block; vertical-align-align:top; text-align:center; padding-top:20px;">
+			<div style="display:inline-block; vertical-align:top; text-align:center; padding-top:20px;">
 				<div style="text-align:center;">
 					<img src="images/TAM-Logo.png" alt="Texas A&M Logo" width="150" height="150px">
 				</div>
@@ -62,8 +62,8 @@
 				</div>
 			</div>
 			
-			<div style="display:inline-block; vertical-align:top; padding:10px; margin-top:5px; margin-bottom:25px;">
-				<ul style="list-style-type:none; text-align:left;">
+			<div class="coursework">
+				<ul>
 					<li style="font-size:20px; color:#500000;"><b>Relevant Coursework</b></li>
 					<li>Intro to Program Design Concepts</li>
 					<li>Computer Fluency</li>
@@ -84,15 +84,15 @@
 		
 		<div class="project">
 			<div class="projectTitle">
-			<h3 style="margin:2px;">Stutter Speak</h3>
-			<p style="margin:2px;">May 2021 - August 2021</p>
-			<p style="margin:2px;">Co-developed</p>
-			<a class="links" href="https://github.com/Jableman19/StutterSpeak" target="_blank">
-				<img style="margin:5px;" title="View on GitHub" src="images/GitHub_Logo_Dark.png" alt="Stutter Speak GitHub Link" width="40px" height="40px">
-			</a>
-			<a class="links" href="https://www.oculus.com/experiences/quest/4159850590802633/" target="_blank">
-				<img style="margin:5px;" title="View in App Lab" src="images/SideQuest Logo Dark.png" alt="Stutter Speap App Lab Link" width="46px" height="40px">
-			</a>
+				<h3>Stutter Speak</h3>
+				<p>May 2021 - August 2021</p>
+				<p>Co-developed</p>
+				<a class="links" href="https://github.com/Jableman19/StutterSpeak" target="_blank">
+					<img style="margin:5px;" title="View on GitHub" src="images/GitHub_Logo_Dark.png" alt="Stutter Speak GitHub Link" width="40px" height="40px">
+				</a>
+				<a class="links" href="https://www.oculus.com/experiences/quest/4159850590802633/" target="_blank">
+					<img style="margin:5px;" title="View in App Lab" src="images/SideQuest Logo Dark.png" alt="Stutter Speap App Lab Link" width="46px" height="40px">
+				</a>
 			</div>
 			<div class="projectDescription">
 				<p class="paragraphs" style="max-width:525px;">Developed as a team of two in partnership with a licensed, certified speech-language pathologist, Stutter Speak is a VR application built in Unreal Engine 4 using a blend of C++ and Blueprint. 
@@ -110,9 +110,9 @@
 		
 		<div class="project">
 			<div class="projectTitle">
-				<h3 style="margin:2px;">Portofilo Website</h3>
-				<p style="margin:2px;">July 2021 - August 2021</p>
-				<p style="margin:2px;">Independent</p>
+				<h3>Portofilo Website</h3>
+				<p>July 2021 - August 2021</p>
+				<p>Independent</p>
 				<a class="links" href="https://github.com/RobertEads/PortfolioWebsite" target="_blank">
 					<img style="margin:5px;" title="View on GitHub" src="images/GitHub_Logo_Dark.png" alt="Portofili Website GitHub Link" width="40px" height="40px">
 				</a>
@@ -130,9 +130,9 @@
 		
 		<div class="project">
 			<div class="projectTitle">
-				<h3 style="margin:2px;">Saxophone Simulator</h3>
-				<p style="margin:2px;">May 2021</p>
-				<p style="margin:2px;">Co-developed</p>
+				<h3>Saxophone Simulator</h3>
+				<p>May 2021</p>
+				<p>Co-developed</p>
 			</div>
 			<div class="projectDescription">
 				<p class="paragraphs" style="max-width:525px;">Created with the Unity game engine in C# alongside my parnter Jonah, "Saxo Sim" was taken from concept to completion in just over one week.
@@ -155,19 +155,38 @@
 		<h1 class="heading" id="extracurricular">Extracurricular</h1>
 		<div class="project">
 			<div class="projectTitle">
-				<h3 style="margin:2px;">STEM to Stocks</h3>
-				<p style="margin:2px;">Core Guild Member</p>
-				<p style="margin:2px;">August 2020 - Current</p>
+				<h3>STEM to Stocks</h3>
+				<p>Core Guild Member</p>
+				<p>August 2020 - Current</p>
 				<a class="links" href="https://mays.tamu.edu/ms-finance/stem-to-stocks-guild/" target="_blank">
 					<img style="margin-top:5px;" title="STEM to Stocks Guild Website" src="images/Stem to Stocks Logo.png" alt="STEM to Stocks Guild Website Link" width="150px" height="65px">
 				</a>
 			</div>
 			<div class="projectDescription" style="padding:0;">
-				<ul>
+				<ul style="margin-top:5px;">
 					<li style="margin-bottom:10px;">Joined the STEM to Stocks Guild, designed to help build professional relationships and develop marketablility as an engineer in the buisness sector.</li>
 					<li style="margin-bottom:10px;">Communicated effectivly with 100+ guild members during biweekly meetings to expand my professional network and create mutually beneficial lasting connections.</li>
 				</ul>
 			</div>
+		</div>
+		
+		<div class="project">
+			<div class="projectTitle">
+				<h3>Aggie Web Developers</h3>
+				<p>Club Member</p>
+				<p> August 2021 - Current</p>
+				<a class="links" href="https://www.aggiedevelopers.com/" target="_blank">
+					<img title="Aggie Web Developers Website" src="images/Aggie_Web_Developers_Logo.jpg" alt="Aggie Web Developers Website Link" width="121px" height="75px">
+				</a>
+			</div>
+			<div class="projectDescription" style="padding:0;">
+				<ul style="margin-top:5px;">
+					<li style="margin-bottom:10px;">Participating in weekly meetings with team members leading to the fostering & growth of fellow developer’s ideas. </li>
+					<li style="margin-bottom:10px;">Contributing to the progression of projects and presenting original ideas in a clear and understandable manner.</li>
+					<li style="margin-bottom:10px;">Collaborated with club memebers to ensure quality work and client satisfaction thoughout development process.</li>
+				</ul>
+			</div>
+			
 		</div>
 	</div>
 	
