Updated Resume and Course Work

--- a/index.htm
+++ b/index.htm
@@ -65,11 +65,12 @@
 			<div class="coursework">
 				<ul>
 					<li style="font-size:20px; color:#500000;"><b>Relevant Coursework</b></li>
+					<li>Data Structures and Algorithms</li>
+					<li>Discrete Structures for Computing</li>
 					<li>Intro to Program Design Concepts</li>
 					<li>Computer Fluency</li>
-					<li>Honors Calculus I</li>
-					<li>Calculus II</li>
 					<li>Multivariable and Vector Calculus</li>
+					<li>Linear Algebra</li>
 					<li>Physics I: Mechanics</li>
 					<li>Physics II: Electricity and Magnetism</li>
 				</ul>
