--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
 	<div class="darkBox" style="padding-bottom: 30px;">
 		<h1 class="heading" id="aboutMe">About Me</h1>
 		<div style="text-align:center;">
-			<p class="paragraphs" style="max-width:500px; text-align:left; padding:30px; padding-top:45px;">
+			<p class="paragraphs" style="max-width:500px; padding:30px; padding-top:45px;">
 				An active computer science apprentice at Texas A&M University in my sophmore year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
 				Currently exploring different facets of mixed reality, but am looking to gain experience in the field of software engineering or virtual reality development.
 				I whole heartly embrace Texas culture and am fond of running, playing basketball, and listening to music.
